[package]
name = "yeast"
version = "0.20.2"
authors = ["Yvan Sraka <yvan@sraka.xyz>"]
edition = "2018"
description = "Yet Another Shell Trick"
repository = "https://github.com/yvan-sraka/yeast"
readme = "README.md"
license = "GPL-3.0"

[badges]
travis-ci = { repository =  "https://github.com/yvan-sraka/yeast", branch = "master" }
maintenance = { status = "experimental" }

[dependencies]
ansi_term = "0.11"
clap = "2.32.0"
libc = "0.2.37"
rand = "0.4.2"
